# abrasive-cli

./: Cargo.toml  abrasive.toml
.github/workflows/: release.yml
cli/: Cargo.toml  README.md
cli/.github/workflows/: release.yml
cli/src/: agent.rs  auth.rs  errors.rs  main.rs  platform.rs  tags.rs
protocol/: Cargo.toml  README.md
protocol/src/: lib.rs
src/: main.rs
