[package]
name = "abrasive-protocol"
version = "0.0.1"
edition = "2024"
description = "Wire protocol types for abrasive, a remote cargo CLI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Clavigers/abrasive-cli"

[dependencies]
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
bincode = "1"
flate2 = "1"
